After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771871 - lv2 plugin doesn't do processing in case of mono sound
lv2 plugin doesn't do processing in case of mono sound
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.9.2
Other All
: Normal major
: 1.9.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-23 10:26 UTC by Sergey Mamonov
Modified: 2016-09-30 07:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch with fix (1.65 KB, patch)
2016-09-28 17:40 UTC, Sergey Mamonov
none Details | Review
git patch against HEAD. (2.11 KB, patch)
2016-09-29 10:38 UTC, Sergey Mamonov
committed Details | Review
fix for https://bugzilla.gnome.org/show_bug.cgi?id=771871 (2.13 KB, patch)
2016-09-29 18:00 UTC, Stefan Sauer (gstreamer, gtkdoc dev)
committed Details | Review

Description Sergey Mamonov 2016-09-23 10:26:37 UTC
Hi

I have a scenario with processing mono audio with lv2 plugin. It doesn't not work.

Most likely the root of the problem is in ext/lv2/stlv2filter.c function gst_lv2_filter_transform_data:

the allocated array (in) to be processed in lv2 is filled with input data only in case of number of lv2 input ports more than 1 (most likely should be MORE OR EQUALS 1). In case when lv2_group->ports->len == 1 the array "in" is not initialized with data from the in_map but passed to the function lilv_instance_connect_port.

Definitely the same situation happens with storing of processed data form the  out array to the out_map

Thanks
Sergey
Comment 1 Sergey Mamonov 2016-09-28 17:40:51 UTC
Created attachment 336463 [details] [review]
patch with fix

possible fix
Comment 2 Stefan Sauer (gstreamer, gtkdoc dev) 2016-09-28 20:34:40 UTC
Thanks, looks good. I'll test it a bit.
Comment 3 Stefan Sauer (gstreamer, gtkdoc dev) 2016-09-28 20:35:42 UTC
btw. which plugins did you test with?
Comment 4 Stefan Sauer (gstreamer, gtkdoc dev) 2016-09-28 20:40:05 UTC
Ideally please attach patches in git format against HEAD.

git add ext/lv2/gstlv2filter.c
git commit 
<type message>

git format-patch origin/master

The current patch does not apply :/
Comment 5 Sergey Mamonov 2016-09-29 08:30:53 UTC
(In reply to Stefan Sauer (gstreamer, gtkdoc dev) from comment #3)
> btw. which plugins did you test with?

I tested the plugin of my customer. Sorry cannot share it.
Comment 6 Sergey Mamonov 2016-09-29 10:38:11 UTC
Created attachment 336496 [details] [review]
git patch against HEAD.
Comment 7 Sergey Mamonov 2016-09-29 10:51:03 UTC
(In reply to Stefan Sauer (gstreamer, gtkdoc dev) from comment #4)
> Ideally please attach patches in git format against HEAD.
> 
> git add ext/lv2/gstlv2filter.c
> git commit 
> <type message>
> 
> git format-patch origin/master
> 
> The current patch does not apply :/

done
Comment 8 Stefan Sauer (gstreamer, gtkdoc dev) 2016-09-29 17:59:58 UTC
The following fix has been pushed:
e985754 fix for https://bugzilla.gnome.org/show_bug.cgi?id=771871
Comment 9 Stefan Sauer (gstreamer, gtkdoc dev) 2016-09-29 18:00:08 UTC
Created attachment 336532 [details] [review]
fix for https://bugzilla.gnome.org/show_bug.cgi?id=771871
Comment 10 Tim-Philipp Müller 2016-09-29 18:34:10 UTC
In future please use a git message like:

---------------------------------------------------------
lv2: fix handling of mono audio

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=771871
---------------------------------------------------------

Thanks for the patch! :)
Comment 11 Sergey Mamonov 2016-09-29 18:38:08 UTC
ok, i will

thanks alot for your help