fix for https://bugzilla.gnome.org/show_bug.cgi?id=771871